<resources>
    <string name="app_name">CRUDComUP</string>
    <string name="produtos">Produtos</string>
    <string name="bordas">Bordas</string>
    <string name="categorias">Categorias</string>
    <string name="nome">Nome</string>
    <string name="valor">Valor</string>
    <string name="salvar">Salvar</string>
    <string name="cancelar">Cancelar</string>
    <string name="cadastroborda">Cadastro de Bordas</string>
    <string name="nome_borda_hint">Digite uma borda</string>
    <string name="valor_hint">Digite um valor</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="novo">Novo</string>
    <string name="descricao">Descrição</string>
    <string name="divisivel">Divisivel</string>
    <string name="nome_categoria_hint">Digite uma categoria</string>
    <string name="cadastrocategoria">Cadastro de Categoria</string>
</resources>
