<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/container"
    tools:context=".view.CadastroCategoriaActivity">



    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cadastrocategoria"
        android:layout_marginBottom="20dp"
        android:textSize="30sp"
        android:textAlignment="center"
        />

    <TextView
        style="@style/input"
        android:text="@string/nome"
        />
    <EditText
        style="@style/input"
        android:hint="@string/nome_categoria_hint"
        android:layout_marginBottom="15dp"
        android:id="@+id/editNome"
        />


    <TextView
        style="@style/input"
        android:text="@string/valor"
        />
    <EditText
        style="@style/input"
        android:hint="@string/valor_hint"
        android:id="@+id/editValor"
        android:layout_marginBottom="15dp"
        />

    <TextView
        style="@style/input"
        android:text="@string/divisivel"
        />
    <CheckBox
        style="@style/input"
        android:id="@+id/checkboxDivisivel"
        android:layout_marginBottom="15dp"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <Button
            style="@style/botao"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/salvar"
            />

        <Button
            style="@style/botao"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/cancelar"
            />

    </LinearLayout>
</LinearLayout>