<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/container"
    tools:context=".view.PesquisaBordaActivity">

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bordas"
        android:textAlignment="center"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome_borda_hint"
        android:layout_marginBottom="15dp"
        android:id="@+id/editNome"
        />

    <Button
        style="@style/botao"
        android:textAlignment="center"
        android:text="@string/pesquisar"
        />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:id="@+id/lvBordas"
        >





    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <Button
            style="@style/botao"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/novo"
            />

        <Button
            style="@style/botao"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/cancelar"
            />

    </LinearLayout>






</LinearLayout>