<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/container"
    tools:context=".view.PesquisaCategoriaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_height="wrap_content">


        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/categorias"
            android:textAlignment="center"
            android:textSize="30sp"

            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome_categoria_hint"
            android:layout_marginBottom="15dp"
            android:id="@+id/editPesquisa"
            />

        <Button
            style="@style/botao"
            android:textAlignment="center"
            android:text="@string/pesquisar"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="12"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:id="@+id/lvCategorias"
            >

        </ListView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content">

        <Button
            style="@style/botao"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/novo"
            android:layout_height="match_parent"
            />

        <Button
            style="@style/botao"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/cancelar"
            />

    </LinearLayout>

</LinearLayout>